Increase PermGen for tests.