@@ -616,7 +616,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.4.3</version>
                 <configuration>
-                    <argLine>-Xms64m -Xmx256m</argLine>
+                    <argLine>-Xms64m -Xmx256m -XX:MaxPermSize=128m</argLine>
                 </configuration>
             </plugin>
             <!--
